I have finished this homework

--- a/english.org
+++ b/english.org
@@ -126,8 +126,6 @@ What is your name?
     Understand - понимать
 #+END_EXAMPLE
 
-
-
 ** Past Simple
 
 Действие, совершившееся в прошлом.
@@ -137,8 +135,8 @@ What is your name?
   - Да! Тогда к глаголу добавится =ed= (watched, helped etc.)
   - Нет! Тогда употребляем собственную вторую форму глагола: (see->sow, go->went etc.)
 
-Для построения отрицания или вопроса используется вспомогательный глагол =do=. Раз он
-помогает, то забирает на себя временную нагрузку: становится =did=.
+Для построения отрицания или вопроса используется вспомогательный глагол =do=.
+Раз он помогает, то забирает на себя временную нагрузку: становится =did=.
 
 Утверждение:
 
@@ -215,7 +213,6 @@ What is your name?
   Seem - казаться
   Understand - понимать
 #+END_EXAMPLE
-
 
 ** Present Perfect Simple
 
